# euler-set-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Taskfile.yml
.github/workflows/: build.yml
NuGet.Library.Support.CXX.CLI/: NuGet.Library.Support.CXX.CLI.csproj  packages.config
NuGet.Library.Support.CXX.CLI/Properties/: AssemblyInfo.cs
include/: BasicSetOperation.hpp  Converter.hpp  Expression.hpp  Parser.hpp  Set.hpp  WolframCalling.hpp
include/euler-set-solver/: app.hpp  converter.hpp  expression.hpp  parser.hpp  set-op.hpp  set-operator.hpp  set.hpp  utility.hpp  wolfram-wrapper.hpp
src/: BasicSetOperation.cpp  Converter.cpp  Expression.cpp  Parser.cpp  Set.cpp  WolframCalling.cpp  app.cpp  converter.cpp  expression.cpp  main.cpp  parser.cpp  set-op.cpp  set-operator.cpp  set.cpp  wolfram-wrapper.cpp
tests/: converter-tests.cpp  parser-tests.cpp  set-operator-tests.cpp  set-tests.cpp  tests.cpp  utility.hpp
